<resources>
    <string name="app_name">CVD Prevention</string>
    <string name="age_label">* Age</string>
    <string name="age_input_hint">age</string>
    <string name="gender_rb_female">Female</string>
    <string name="gender_rb_male">Male</string>
    <string name="cigarette_smoker_label">* Cigarette smoker?</string>
    <string name="smoking_status_cb_no">No</string>
    <string name="smoking_status_cb_yes">Yes</string>
    <string name="waist_circumference_label">* Waist circumference</string>
    <string name="waist_circumference_hint">cm</string>
    <string name="systolic_blood_pressure_label">* Systolic blood pressure</string>
    <string name="systolic_blood_pressure_hint">90–200 mmHg</string>
    <string name="diastolic_blood_pressure_label">* Diastolic blood pressure</string>
    <string name="diastolic_blood_pressure_hint">30–140 mmHg</string>
    <string name="total_cholesterol_label">* Total cholesterol</string>
    <string name="mmol_hint">mmol/L</string>
    <string name="hdl_cholesterol_label">* HDL cholesterol</string>
    <string name="ldl_cholesterol_label">* LDL cholesterol</string>
    <string name="triglycerides_label">* Triglycerides</string>
    <string name="blood_glucose_label">* Blood Glucose</string>
    <string name="statements_label">If any of statements below applies to you, please check it</string>
    <string name="cvd">Existing cardiovascular disease</string>
    <string name="diabetes">Diabetes without damage to target organ</string>
    <string name="diabetesTOD">Diabetes with damage to target organ</string>
    <string name="serious_chronic_kidney_disease">Serious chronic kidney disease (glomerular filtration rate 30mL / min / 1.73m2)</string>
    <string name="chronic_kidney_disease">Chronic kidney disease (glomerular filtration rate 30–59 mL / min / 1.73m2)</string>
    <string name="survey_button">DONE</string>
    <string name="gender_label">* Gender</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_link">No account yet? Register</string>
</resources>
