<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout">

    <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_login_input"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/email_hint"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/secondary_text" android:layout_marginTop="128dp"
            app:layout_constraintTop_toTopOf="parent"

    android:text="majatest@gmail.com"/>
    <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass_login_input"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/password_hint"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/secondary_text"
            app:layout_constraintHorizontal_bias="0.491" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_login_input"

    android:text="majatest"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content" android:id="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.513"
            android:textColor="@color/light_text_icons"
            android:background="@color/light_primary_color" android:textSize="18sp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/pass_login_input"/>
    <TextView
            android:text="@string/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerLink" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@color/secondary_text" android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>